# sql_chatbot

./: README.md  chainlit.md  prompts.md  pyproject.toml  setup.py  use_cases.md
sql_analyzer/: agent_factory.py  config.py  log_init.py  mysql_analyzer.py  mysql_analyzer_chainlit.py  mysql_analyzer_cli.py  sql_db_factory.py
sql_analyzer/experiments/: snowflake_connect.py
sql_analyzer/sql/: sql_tool.py
